Se crea el form de usuarios. Se agrega knp_paginator.

--- a/src/BalotajeBundle/Resources/views/Mesa/index.html.twig
+++ b/src/BalotajeBundle/Resources/views/Mesa/index.html.twig
@@ -27,9 +27,9 @@
                             <tr>
                                 <th>Id</th>
                                 <th>Numero</th>
-                                <th>Escuelatestigo</th>
-                                <th>Resultadocambiemos</th>
-                                <th>Resultadofpv</th>
+                                <th>Escuela testigo</th>
+                                <th>Resultado Cambiemos</th>
+                                <th>Resultado FPV</th>
                                 <th>Creado</th>
                                 <th>Actualizado</th>
                                 <th>Acciones</th>
