--- a/src/UbicacionBundle/Resources/views/Localidad/show.html.twig
+++ b/src/UbicacionBundle/Resources/views/Localidad/show.html.twig
@@ -1,48 +1,63 @@
-    {% extends 'ThemeBundle:Default:layout_base.html.twig' %}
+{% extends 'ThemeBundle:Default:layout_base.html.twig' %}
 
-    {% block body -%}
-    <h1>Localidad</h1>
+{% block content_title %}
+   Resumen
+{% endblock %}
 
-    <table class="record_properties">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ entity.id }}</td>
-            </tr>
-            <tr>
-                <th>Descripcion</th>
-                <td>{{ entity.descripcion }}</td>
-            </tr>
-            <tr>
-                <th>Codigo</th>
-                <td>{{ entity.codigo }}</td>
-            </tr>
-            <tr>
-                <th>Codigopostal</th>
-                <td>{{ entity.codigoPostal }}</td>
-            </tr>
-            <tr>
-                <th>Creado</th>
-                <td>{{ entity.creado|date('Y-m-d H:i:s') }}</td>
-            </tr>
-            <tr>
-                <th>Actualizado</th>
-                <td>{{ entity.actualizado|date('Y-m-d H:i:s') }}</td>
-            </tr>
-        </tbody>
-    </table>
+{% block content -%}
+<div class="row">
+    <div class="col-md-6">
+        <div class="box box-primary">
+            <div class="box-header with-border">
+                <h3 class="box-title">Localidad</h3>
+            </div>
+            <div class="box-body">
+                <table class="record_properties">
+                    <tbody>
+                        <tr>
+                            <th>Id</th>
+                            <td>{{ entity.id }}</td>
+                        </tr>
+                        <tr>
+                            <th>Descripcion</th>
+                            <td>{{ entity.descripcion }}</td>
+                        </tr>
+                        <tr>
+                            <th>Codigo</th>
+                            <td>{{ entity.codigo }}</td>
+                        </tr>
+                        <tr>
+                            <th>Codigopostal</th>
+                            <td>{{ entity.codigoPostal }}</td>
+                        </tr>
+                        <tr>
+                            <th>Creado</th>
+                            <td>{{ entity.creado|date('Y-m-d H:i:s') }}</td>
+                        </tr>
+                        <tr>
+                            <th>Actualizado</th>
+                            <td>{{ entity.actualizado|date('Y-m-d H:i:s') }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('localidad') }}">
-            Back to the list
+
+        <div class="box-footer">
+<a class="btn btn-default" href="{{ path('localidad') }}">
+    Volver
+</a>
+
+
+        <a class="btn btn-primary" href="{{ path('localidad_edit', { 'id': entity.id }) }}">
+            Editar
         </a>
-    </li>
-    <li>
-        <a href="{{ path('localidad_edit', { 'id': entity.id }) }}">
-            Edit
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
-    {% endblock %}
+
+</div>
+</div>
+</div>
+</div>
+    {{ form(delete_form) }}
+
+
+{% endblock %}
