--- a/src/UsuariosBundle/Resources/views/Usuario/new.html.twig
+++ b/src/UsuariosBundle/Resources/views/Usuario/new.html.twig
@@ -16,7 +16,7 @@
                 {{ form(form) }}
 
                 <div class="box-footer">
-                    <a class="btn btn-default" href="{{ path('usuario') }}">
+                    <a class="btn btn-default" href="{{ path('usuarios') }}">
                         Volver
                     </a>
 
