--- a/src/UsuariosBundle/Resources/views/Usuario/show.html.twig
+++ b/src/UsuariosBundle/Resources/views/Usuario/show.html.twig
@@ -32,12 +32,12 @@
 
 
         <div class="box-footer">
-<a class="btn btn-default" href="{{ path('usuario') }}">
+<a class="btn btn-default" href="{{ path('usuarios') }}">
     Volver
 </a>
 
 
-        <a class="btn btn-primary" href="{{ path('usuario_edit', { 'id': entity.id }) }}">
+        <a class="btn btn-primary" href="{{ path('usuarios_edit', { 'id': entity.id }) }}">
             Editar
         </a>
 
