--- a/src/ThemeBundle/Resources/views/Default/layout_base.html.twig
+++ b/src/ThemeBundle/Resources/views/Default/layout_base.html.twig
@@ -35,6 +35,9 @@
     <!-- bootstrap wysihtml5 - text editor -->
     <link rel="stylesheet"
           href="{{ asset('bundles/theme/AdminLTE-2.3.0/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css') }}">
+    <!-- app css -->
+    <link rel="stylesheet"
+          href="{{ asset('bundles/theme/css/app.css') }}">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -102,7 +105,7 @@
 {% endif %}
 
 
-<body class="hold-transition skin-blue sidebar-mini fixed">
+<body class="hold-transition skin-pim sidebar-mini fixed">
 <div class="wrapper">
 
     <header class="main-header">
