--- a/src/ThemeBundle/Resources/views/Default/menu_lateral.html.twig
+++ b/src/ThemeBundle/Resources/views/Default/menu_lateral.html.twig
@@ -27,7 +27,7 @@
                     class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
-            <li class="active"><a href="#"><i class="fa fa-circle-o"></i> Listado</a></li>
+            <li class="active"><a href="{{ path('usuarios') }}"><i class="fa fa-circle-o"></i> Listado</a></li>
             {#<li><a href="{{ path('fos_user_group_list') }}"><i class="fa fa-circle-o"></i> Grupos</a></li>#}
 
         </ul>
