--- a/src/UbicacionBundle/Resources/views/Departamento/edit.html.twig
+++ b/src/UbicacionBundle/Resources/views/Departamento/edit.html.twig
@@ -4,7 +4,7 @@
 {{ title }}
 {% endblock %}
 
-    {% block body -%}
+    {% block content -%}
 
     <h4 class="page-header">Departamento</h4>
     <div class="row">
