--- a/src/UbicacionBundle/Resources/views/Localidad/index.html.twig
+++ b/src/UbicacionBundle/Resources/views/Localidad/index.html.twig
@@ -1,91 +1,70 @@
     {% extends 'ThemeBundle:Default:layout_base.html.twig' %}
-{% set title = 'Localidad' %}
-{% block title %}
-{{ title }}
-{% endblock %}
-    {% block body -%}
-    <h4 class="page-header">{{ title }}</h4>
+
+    {% block content -%}
+
+
     <div class="row">
         <div class="col-xs-12">
-            <div class="box ui-draggable ui-droppable">
+            <div class="box">
                 <div class="box-header">
-                    <div class="box-name ui-draggable-handle">
-                        <i class="fa fa-search"></i>
-                        <span>Filtros</span>
-                    </div>
-                </div>
-                <div class="box-content no-padding">
-                    <form class="form-horizontal" role="form">
+                    <h3 class="box-title">Listado Localidad</h3>
 
-                        <div class="clearfix"></div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-4">
-                                <button class="btn btn-primary btn-label-left" type="submit">
-                                    <span>
-                                        <i class="fa fa-filter"></i>
-                                    </span>
-                                    Buscar
-                                </button>
-                                <button class="btn btn-default" type="reset">
-                                    <span>
-                                        <i></i>
-                                    </span>
-                                    Limpiar
-                                </button>
-                            </div>                            
+                    <div class="box-tools">
+                        <div class="input-group" style="width: 150px;">
+                            <input type="text" name="table_search" class="form-control input-sm pull-right"
+                                   placeholder="Buscar">
+
+                            <div class="input-group-btn">
+                                <button class="btn btn-sm btn-default"><i class="fa fa-search"></i></button>
+                            </div>
                         </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="box ui-draggable ui-droppable">
-                <div class="box-header">
-                    <div class="box-name ui-draggable-handle">
-                        <i class="fa fa-table"></i>
-                        <span>Listado {{ title }}</span>
                     </div>
                 </div>
-                <div class="box-content no-padding">
-                    <div id="datatable-1_wrapper" class="dataTables_wrapper form-inline">
-                        <table  class="table table-bordered table-striped table-hover table-heading table-datatable dataTable datatable-1" role="grid" aria-describedby="datatable-1_info">
-                            <thead>
-                                <tr role="row">                                    <th class="sorting_asc" tabindex="0" aria-controls="datatable-1" rowspan="1" colspan="1" style="width: 46px;" aria-sort="ascending" aria-label="Id">Id</th>                                    <th class="sorting" tabindex="0" aria-controls="datatable-1" rowspan="1" colspan="1" style="width: 200px;" aria-label="Descripcion">Descripcion</th>                                    <th class="sorting" tabindex="0" aria-controls="datatable-1" rowspan="1" colspan="1" style="width: 200px;" aria-label="Codigo">Codigo</th>                                    <th class="sorting" tabindex="0" aria-controls="datatable-1" rowspan="1" colspan="1" style="width: 200px;" aria-label="Codigopostal">Codigopostal</th>                                    <th class="sorting" tabindex="0" aria-controls="datatable-1" rowspan="1" colspan="1" style="width: 200px;" aria-label="Creado">Creado</th>                                    <th class="sorting" tabindex="0" aria-controls="datatable-1" rowspan="1" colspan="1" style="width: 200px;" aria-label="Actualizado">Actualizado</th>                                    <th class="" tabindex="0" aria-controls="datatable-1" rowspan="1" colspan="1" style="width: 200px;" aria-label="">Actions</th>
+                <!-- /.box-header -->
+                <div class="box-body table-responsive no-padding">
+                    <table class="table table-hover">
 
-                                </tr>
-                            </thead>
-                            <tbody role="alert" aria-live="polite" aria-relevant="all">
-                                {% for entity in entities %}
-                                <tr class="{% if loop.index is odd %} odd {% else %} even {% endif %}">
-                                    <td>{{ entity.id }}</td>
+                        <tr>
+                                <th>Id</th>
+                                <th>Descripcion</th>
+                                <th>Codigo</th>
+                                <th>Codigopostal</th>
+                                <th>Creado</th>
+                                <th>Actualizado</th>
+                            <th>Acciones</th>
+                        </tr>
+
+                        {% for entity in entities %}
+                        <tr>
+                                    <td>
+                                        <a href="{{ path('localidad_show', { 'id': entity.id }) }}">{{ entity.id }}</a>
+                                    </td>
                                     <td>{{ entity.descripcion }}</td>
                                     <td>{{ entity.codigo }}</td>
                                     <td>{{ entity.codigoPostal }}</td>
                                     <td>{% if entity.creado %}{{ entity.creado|date('Y-m-d H:i:s') }}{% endif %}</td>
                                     <td>{% if entity.actualizado %}{{ entity.actualizado|date('Y-m-d H:i:s') }}{% endif %}</td>
                                     <td>
-                                                                                <a class="btn btn-default" href="{{ path('localidad_edit', { 'id': entity.id }) }}"><i class="fa fa-fw fa-edit"></i></a>
+
+                        <a class="btn btn-default" href="{{ path('localidad_show', { 'id': entity.id }) }}"><i class="fa fa-eye"></i></a>
+
+                        <a class="btn btn-default" href="{{ path('localidad_edit', { 'id': entity.id }) }}"><i class="fa fa-edit"></i></a>
+
                                     </td>
-                                </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                        <div class="box-content">
-                            {{ knp_pagination_render(entities) }}
-                        </div>
-                    </div>
+                        </tr>
+                        {% endfor %}
+
+                    </table>
                 </div>
+                <div class="box-footer">
+                    
+                        <a class="btn btn-primary" href="{{ path('localidad_new') }}">
+                            Nuevo
+                        </a>
+
+                                    </div>
             </div>
-
-            
-                <a class="btn btn-primary" href="{{ path('localidad_new') }}">
-                    Nuevo
-                </a>
-
-            
         </div>
     </div>
-
+    {{ knp_pagination_render(entities) }}
     {% endblock %}
