--- a/src/ThemeBundle/Resources/views/Default/menu_lateral.html.twig
+++ b/src/ThemeBundle/Resources/views/Default/menu_lateral.html.twig
@@ -7,6 +7,7 @@
         </a>
         <ul class="treeview-menu">
             <li class="active"><a href="{{ path('mesas') }}"><i class="fa fa-circle-o"></i> Mesas</a></li>
+            <li class="active"><a href="{{ path('resultados') }}"><i class="fa fa-circle-o"></i> Resultados</a></li>
         </ul>
     </li>
     <li class="treeview">
