correccion de altura

--- a/src/BalotajeBundle/Resources/views/Default/index.html.twig
+++ b/src/BalotajeBundle/Resources/views/Default/index.html.twig
@@ -9,7 +9,8 @@
 
         $(document).ready(function () {
             $('.main-footer').hide();
-            altura = $(".content-wrapper").height() - 100;
+            //altura = $(".content-wrapper").height() - 100;
+            altura = 450;
             cambiemos = {{ votos.cambiemos }};
             fpv = {{ votos.fpv }};
 
