--- a/src/ThemeBundle/Resources/views/Default/layout_anonimous.html.twig
+++ b/src/ThemeBundle/Resources/views/Default/layout_anonimous.html.twig
@@ -41,7 +41,14 @@
 
                 </div>
 
+                <div class="navbar-custom-menu">
+                    <ul class="nav navbar-nav">
 
+                        <li>
+                            <a href="{{ path('fos_user_security_login') }}">Ingresar</a>
+                        </li>
+                    </ul>
+                </div><!-- /.navbar-custom-menu -->
             </div><!-- /.container-fluid -->
         </nav>
     </header>
