cambio de margenes en div de candidatos

--- a/src/BalotajeBundle/Resources/views/Default/index.html.twig
+++ b/src/BalotajeBundle/Resources/views/Default/index.html.twig
@@ -130,18 +130,18 @@
         </div>
         <div id="div-grafico">
             <div class="col-md-2 col-md-offset-1"
-                 style=" text-align: right; font-size: 35px; position: relative; top:80%; left: 18%; z-index: 1000000;">
+                 style="margin-right: 60px; text-align: right; font-size: 35px; position: relative; top:80%; left: 18%; z-index: 1000000;">
                 <span id="porcentaje-fpv" class="label label-primary">FpV</span><br>
                 <img src="{{ asset('bundles/app/img/fpv_logo.jpg') }}" style="max-height: 45px;">
 
             </div>
-            <div class="col-md-3 text-center" style="margin-right: -75px; top:100%" id="div-fpv">
+            <div class="col-md-3 text-center" style="margin-right: -80px; top:100%" id="div-fpv">
 
 
                 <img style="position: absolute" class="img-responsive">
             </div>
 
-            <div class="col-md-3  text-center" style="margin-left: -35px;top:100%;  " id="div-cambiemos">
+            <div class="col-md-3  text-center" style="margin-left: 0px;top:100%;  " id="div-cambiemos">
 
                 <img style="position: absolute" class="img-responsive">
 
