cambio de altura y ancho para el responsive

--- a/src/BalotajeBundle/Resources/views/Default/index.html.twig
+++ b/src/BalotajeBundle/Resources/views/Default/index.html.twig
@@ -10,7 +10,7 @@
         $(document).ready(function () {
             $('.main-footer').hide();
             //altura = $(".content-wrapper").height() - 100;
-            altura = window.innerHeight;
+            altura = window.innerHeight >= window.innerWidth ? window.innerWidth: window.innerHeight;
             cambiemos = {{ votos.cambiemos |default(1)}};
             fpv = {{ votos.fpv |default(1) }};
 
