--- a/src/BalotajeBundle/Resources/views/Default/index.html.twig
+++ b/src/BalotajeBundle/Resources/views/Default/index.html.twig
@@ -5,9 +5,12 @@
 
 {% block javascripts %}
     {{ parent() }}
+    <!-- Select2 -->
+    <script src="{{ asset('bundles/theme/AdminLTE-2.3.0/plugins/select2/select2.full.min.js') }}"></script>
     <script>
 
         $(document).ready(function () {
+            $(".select2").select2();
             $('.main-footer').hide();
             //altura = $(".content-wrapper").height() - 100;
             altura = window.innerHeight >= window.innerWidth ? window.innerWidth: window.innerHeight;
@@ -30,8 +33,8 @@
             if (porcentajeCambiemos < 1) {
                 porcentajeCambiemos = 1;
             }
-            if (porcentajeFpv < 7) {
-                porcentajeFpv = 7;
+            if (porcentajeFpv < 11) {
+                porcentajeFpv = 11;
             }
 
             if (porcentajeCambiemos > 68) {
@@ -98,13 +101,24 @@
 
 //            $('#div-grafico').height('80%');
 
-//            $('.bandera').height('600px');
+            if ( window.innerHeight >= window.innerWidth){
 
+                $('.bandera').height(altura+130);
+            }
+
+            $("#{{ form.localidad.vars.id }}").change(function (){
+                $("#form-buscar").submit();
+            });
+
+
+            setInterval(function(){$("#form-buscar").submit(); }, 60000);
         });
     </script>
 {% endblock %}
 
 {% block content -%}
+    <!-- Select2 -->
+    <link rel="stylesheet" href="{{ asset('bundles/theme/AdminLTE-2.3.0/plugins/select2/select2.min.css') }}">
     <style>
         {#.content-wrapper{#}
         {#background: url('{{ asset('bundles/app/img/BANDERA FONDO.jpg') }}') no-repeat;#}
@@ -206,6 +220,20 @@
             }
         }
 
+        .content {
+            padding: 0px !important;
+        }
+
+        .container {
+            padding: 0px !important;
+        }
+
+        .content-wrapper {
+            padding: 0px !important;
+            margin: 0px !important;
+
+        }
+
 
     </style>
     {#<div class="row"#}
@@ -216,6 +244,14 @@
         <div class="row">
             <img class="img-responsive img-responsive logo col-xs-offset-2 col-md-offset-5"
                  src="{{ asset('bundles/app/img/LOGO PIM.png') }}">
+        </div>
+        <div class="clearfix"></div>
+        <div class="row">
+            <form method="POST" action="{{ path('resultados') }}" style="padding-top: 10px;" id="form-buscar">
+                <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-4 ">
+                    {{ form_widget (form.localidad) }}
+                </div>
+            </form>
         </div>
         <div class="row" id="div-grafico">
             {#<div class="logo-pim">#}
